--- a/web/package.json
+++ b/web/package.json
@@ -4,12 +4,16 @@
   "description": "Domain linkage between Domain Token Contract on blockchain and our DNS server",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Embermine Inc",
   "license": "GPL-3.0",
+  "devDependencies": {
+    "tape": "^4.8.0"
+  },
   "dependencies": {
-    "load-json-file": "^4.0.0",
-    "web3": "^1.0.0-beta.25"
+    "ejs": "^2.5.7",
+    "load-json-file": "^4.0.0"
   }
 }
