--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "Embermine Inc",
   "license": "GPL-3.0",
   "dependencies": {
+    "async": "^2.6.0",
     "load-json-file": "^4.0.0",
+    "mysql": "^2.15.0",
+    "power_dns_authoritative_http_api": "git+https://gitlab.com/Embermine-Dev/powerdns-javascript-api.git",
+    "stdrepl": "^1.0.1",
     "web3": "^1.0.0-beta.25"
   }
 }
