--- a/listener/web/package.json
+++ b/listener/web/package.json
@@ -14,6 +14,6 @@
     "load-json-file": "^4.0.0",
     "mysql": "^2.15.0",
     "stdrepl": "^1.0.1",
-    "web3": "1.0.0-beta.25"
+    "web3": "^1.0.0-beta.30"
   }
 }
